Implement `put()` api in BSTMap.java and optmize java files