@@ -1,27 +1,30 @@
 package bstmap;
 
-import java.util.HashMap;
-import java.util.TreeMap;
-import java.io.IOException;
-import java.util.Scanner;
 import edu.princeton.cs.algs4.Stopwatch;
 
-/** Performs a timing test on three different set implementations.
- *  @author Josh Hug
- *  @author Brendan Hu
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Scanner;
+import java.util.TreeMap;
+
+/**
+ * Performs a timing test on three different set implementations.
+ *
+ * @author Josh Hug
+ * @author Brendan Hu
  */
 public class InsertRandomSpeedTest {
     /**
-        Requests user input and performs tests of three different set
-        implementations. ARGS is unused.
-    */
+     * Requests user input and performs tests of three different set
+     * implementations. ARGS is unused.
+     */
     public static void main(String[] args) throws IOException {
         Scanner input = new Scanner(System.in);
 
         System.out.println("This program inserts random "
-                           + "Strings of length L "
-                           + "into different types of maps "
-                           + "as <String, Integer> pairs.");
+                + "Strings of length L "
+                + "into different types of maps "
+                + "as <String, Integer> pairs.");
         System.out.print("Please enter desired length of each string: ");
         int L = waitForPositiveInt(input);
 
@@ -40,47 +43,53 @@ public class InsertRandomSpeedTest {
         input.close();
     }
 
-    /** Returns time needed to put N random strings of length L into the
-      * Map61B 61bMap. */
+    /**
+     * Returns time needed to put N random strings of length L into the
+     * Map61B 61bMap.
+     */
     public static double insertRandom(Map61B<String, Integer> map61B, int N, int L) {
         Stopwatch sw = new Stopwatch();
         String s = "cat";
         for (int i = 0; i < N; i++) {
             s = StringUtils.randomString(L);
-            map61B.put(s, new Integer(i));
-        }
-        return sw.elapsedTime();
-    }
-
-    /** Returns time needed to put N random strings of length L into the
-      * TreeMap treeMap. */
-    public static double insertRandom(TreeMap<String, Integer> treeMap, int N, int L) {
-        Stopwatch sw = new Stopwatch();
-        String s = "cat";
-        for (int i = 0; i < N; i++) {
-            s = StringUtils.randomString(L);
-            treeMap.put(s, new Integer(i));
-        }
-        return sw.elapsedTime();
-    }
-
-    /** Returns time needed to put N random strings of length L into the
-     * HashMap treeMap. */
-    public static double insertRandom(HashMap<String, Integer> treeMap, int N, int L) {
-        Stopwatch sw = new Stopwatch();
-        String s = "cat";
-        for (int i = 0; i < N; i++) {
-            s = StringUtils.randomString(L);
-            treeMap.put(s, new Integer(i));
+            map61B.put(s, Integer.valueOf(i));
         }
         return sw.elapsedTime();
     }
 
     /**
-        Attempts to insert N random strings of length L into map,
-        Prints time of the N insert calls, otherwise
-        Prints a nice message about the error
-    */
+     * Returns time needed to put N random strings of length L into the
+     * TreeMap treeMap.
+     */
+    public static double insertRandom(TreeMap<String, Integer> treeMap, int N, int L) {
+        Stopwatch sw = new Stopwatch();
+        String s = "cat";
+        for (int i = 0; i < N; i++) {
+            s = StringUtils.randomString(L);
+            treeMap.put(s, Integer.valueOf(i));
+        }
+        return sw.elapsedTime();
+    }
+
+    /**
+     * Returns time needed to put N random strings of length L into the
+     * HashMap treeMap.
+     */
+    public static double insertRandom(HashMap<String, Integer> treeMap, int N, int L) {
+        Stopwatch sw = new Stopwatch();
+        String s = "cat";
+        for (int i = 0; i < N; i++) {
+            s = StringUtils.randomString(L);
+            treeMap.put(s, Integer.valueOf(i));
+        }
+        return sw.elapsedTime();
+    }
+
+    /**
+     * Attempts to insert N random strings of length L into map,
+     * Prints time of the N insert calls, otherwise
+     * Prints a nice message about the error
+     */
     public static void timeRandomMap61B(Map61B<String, Integer> map, int N, int L) {
         try {
             double mapTime = insertRandom(map, N, L);
@@ -93,10 +102,10 @@ public class InsertRandomSpeedTest {
     }
 
     /**
-        Attempts to insert N random strings of length L into a TreeMap
-        Prints time of the N insert calls, otherwise
-        Prints a nice message about the error
-    */
+     * Attempts to insert N random strings of length L into a TreeMap
+     * Prints time of the N insert calls, otherwise
+     * Prints a nice message about the error
+     */
     public static void timeRandomTreeMap(TreeMap<String, Integer> treeMap, int N, int L) {
         try {
             double javaTime = insertRandom(treeMap, N, L);
@@ -109,10 +118,10 @@ public class InsertRandomSpeedTest {
     }
 
     /**
-    Attempts to insert N random strings of length L into a HashMap
-    Prints time of the N insert calls, otherwise
-    Prints a nice message about the error
-    */
+     * Attempts to insert N random strings of length L into a HashMap
+     * Prints time of the N insert calls, otherwise
+     * Prints a nice message about the error
+     */
     public static void timeRandomHashMap(HashMap<String, Integer> hashMap, int N, int L) {
         try {
             double javaTime = insertRandom(hashMap, N, L);
@@ -125,10 +134,10 @@ public class InsertRandomSpeedTest {
     }
 
     /**
-        Waits for the user on other side of Scanner
-        to enter a positive int,
-        and outputs that int
-    */
+     * Waits for the user on other side of Scanner
+     * to enter a positive int,
+     * and outputs that int
+     */
     public static int waitForPositiveInt(Scanner input) {
         int ret = 0;
         do {
@@ -142,16 +151,19 @@ public class InsertRandomSpeedTest {
         return ret;
     }
     /* ------------------------------- Private methods ------------------------------- */
+
     /**
-        To be called after catching a StackOverflowError
-        Prints the error with corresponding N and L
-    */
+     * To be called after catching a StackOverflowError
+     * Prints the error with corresponding N and L
+     */
     private static void printInfoOnStackOverflow(int N, int L) {
         System.out.println("--Stack Overflow -- couldn't add " + N
-                            + " strings of length " + L + ".");
+                + " strings of length " + L + ".");
     }
 
-    /** Prints a nice message for the user on bad input */
+    /**
+     * Prints a nice message for the user on bad input
+     */
     private static void errorBadIntegerInput() {
         System.out.print("Please enter a positive integer: ");
     }
