@@ -1,19 +1,23 @@
 package bstmap;
 
-import java.util.Set;
-import java.util.HashSet;
-import static org.junit.Assert.*;
 import org.junit.Test;
 
-/** Tests of optional parts of lab 7. */
+import java.util.HashSet;
+import java.util.Set;
+
+import static org.junit.Assert.*;
+
+/**
+ * Tests of optional parts of lab 7.
+ */
 public class TestBSTMapExtra {
 
     /*
-    * Sanity test for keySet, only here because it's optional
-    */
+     * Sanity test for keySet, only here because it's optional
+     */
     @Test
     public void sanityKeySetTest() {
-    	BSTMap<String, Integer> b = new BSTMap<String, Integer>();
+        BSTMap<String, Integer> b = new BSTMap<String, Integer>();
         HashSet<String> values = new HashSet<String>();
         for (int i = 0; i < 455; i++) {
             b.put("hi" + i, 1);
@@ -39,13 +43,13 @@ public class TestBSTMapExtra {
      */
     @Test
     public void testRemoveRoot() {
-        BSTMap<String,String> q = new BSTMap<String,String>();
-        q.put("c","a");
-        q.put("b","a");
-        q.put("a","a");
-        q.put("d","a");
-        q.put("e","a"); // a b c d e
-        assertTrue(null != q.remove("c"));
+        BSTMap<String, String> q = new BSTMap<String, String>();
+        q.put("c", "a");
+        q.put("b", "a");
+        q.put("a", "a");
+        q.put("d", "a");
+        q.put("e", "a"); // a b c d e
+        assertNotNull(q.remove("c"));
         assertFalse(q.containsKey("c"));
         assertTrue(q.containsKey("a"));
         assertTrue(q.containsKey("b"));
@@ -58,59 +62,59 @@ public class TestBSTMapExtra {
      */
     @Test
     public void testRemoveThreeCases() {
-        BSTMap<String,String> q = new BSTMap<String,String>();
-        q.put("c","a");
-        q.put("b","a");
-        q.put("a","a");
-        q.put("d","a");
-        q.put("e","a");                         // a b c d e
-        assertTrue(null != q.remove("e"));      // a b c d
+        BSTMap<String, String> q = new BSTMap<String, String>();
+        q.put("c", "a");
+        q.put("b", "a");
+        q.put("a", "a");
+        q.put("d", "a");
+        q.put("e", "a");                         // a b c d e
+        assertNotNull(q.remove("e"));      // a b c d
         assertTrue(q.containsKey("a"));
         assertTrue(q.containsKey("b"));
         assertTrue(q.containsKey("c"));
         assertTrue(q.containsKey("d"));
-        assertTrue(null != q.remove("c"));      // a b d
+        assertNotNull(q.remove("c"));      // a b d
         assertTrue(q.containsKey("a"));
         assertTrue(q.containsKey("b"));
         assertTrue(q.containsKey("d"));
-        q.put("f","a");                         // a b d f
-        assertTrue(null != q.remove("d"));      // a b f
+        q.put("f", "a");                         // a b d f
+        assertNotNull(q.remove("d"));      // a b f
         assertTrue(q.containsKey("a"));
         assertTrue(q.containsKey("b"));
         assertTrue(q.containsKey("f"));
     }
 
     /* Remove Test 3
-    *  Checks that remove works correctly on root nodes
-    *  when the node has only 1 or 0 children on either side. */
+     *  Checks that remove works correctly on root nodes
+     *  when the node has only 1 or 0 children on either side. */
     @Test
     public void testRemoveRootEdge() {
         BSTMap rightChild = new BSTMap();
         rightChild.put('A', 1);
         rightChild.put('B', 2);
         Integer result = (Integer) rightChild.remove('A');
-        assertTrue(result.equals(new Integer(1)));
+        assertEquals(result, Integer.valueOf(1));
         for (int i = 0; i < 10; i++) {
-            rightChild.put((char) ('C'+i), 3+i);
+            rightChild.put((char) ('C' + i), 3 + i);
         }
         rightChild.put('A', 100);
-        assertTrue(((Integer) rightChild.remove('D')).equals(new Integer(4)));
-        assertTrue(((Integer) rightChild.remove('G')).equals(new Integer(7)));
-        assertTrue(((Integer) rightChild.remove('A')).equals(new Integer(100)));
-        assertTrue(rightChild.size()==9);
+        assertEquals(rightChild.remove('D'), Integer.valueOf(4));
+        assertEquals(rightChild.remove('G'), Integer.valueOf(7));
+        assertEquals(rightChild.remove('A'), Integer.valueOf(100));
+        assertEquals(9, rightChild.size());
 
         BSTMap leftChild = new BSTMap();
         leftChild.put('B', 1);
         leftChild.put('A', 2);
-        assertTrue(((Integer) leftChild.remove('B')).equals(1));
+        assertEquals(1, leftChild.remove('B'));
         assertEquals(1, leftChild.size());
-        assertEquals(null, leftChild.get('B'));
+        assertNull(leftChild.get('B'));
 
         BSTMap noChild = new BSTMap();
         noChild.put('Z', 15);
-        assertTrue(((Integer) noChild.remove('Z')).equals(15));
+        assertEquals(15, noChild.remove('Z'));
         assertEquals(0, noChild.size());
-        assertEquals(null, noChild.get('Z'));
+        assertNull(noChild.get('Z'));
     }
 
 }
